--- a/src/components/Main/Main.module.css
+++ b/src/components/Main/Main.module.css
@@ -29,3 +29,17 @@
   .divShoes {
     height: 100%;
   }
+
+  .divTittle {
+    width: 100%;
+    height: 100%;
+    background-color: #FF7600;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .main {
+    margin: 20px 50px;
+  }
